--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,10 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        {% block stylesheets %}
+            <link href="{{ asset('css/main.css') }}" rel="stylesheet"/>
+        {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% block body %}
+            {% include 'header.html.twig' %}{% endblock %}
+        {% block content %}{% endblock content %}
+        {% include 'menu.html.twig' %}
         {% block javascripts %}{% endblock %}
     </body>
 </html>
